--- a/style.css
+++ b/style.css
@@ -7,11 +7,19 @@
 body {
     background-color: gold;
     padding: 20px;
+    max-width: 1400px;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
 }
 
 header {
     background-color: rgba(255, 255, 0, 0.5);
     padding: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
 }
 
 main {
@@ -26,7 +34,7 @@ main {
 section {
     padding: 10px;
     box-shadow: 0px 2px 5px 0px gray;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
     border-radius: 5px;
     background-color: white;
 }
@@ -38,6 +46,30 @@ footer {
 
 img {
     border-radius: 5px;
+    max-width: 100%;
+}
+
+h1 {
+    font-family: "Secular One", sans-serif;
+}
+
+p,
+h2 {
+    font-family: "Roboto", sans-serif;
+}
+
+.name {
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 5px;
+    padding: 5px 15px;
+    top: 20px;
+}
+
+.projects {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 15px;
 }
 
 .project-links {
@@ -45,7 +77,7 @@ img {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin: 10px 0;
+    margin: 10px 20px;
 }
 
 .link-icons {
@@ -67,6 +99,15 @@ img {
     body {
         background-color: yellow;
     }
+
+    .projects {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 15px;
+    }
+
+    .project-links {
+        justify-content: space-between;
+    }
 }
 
 @media (max-width: 600px) {
@@ -75,7 +116,12 @@ img {
         padding: 10px;
     }
 
-    img {
-        max-width: 100%;
+    .projects {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 15px;
+    }
+
+    .project-links {
+        justify-content: space-between;
     }
 }
