--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ section {
 footer {
     background-color: rgba(255, 255, 0, 0.5);
     padding: 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 img {
@@ -56,6 +58,10 @@ h1 {
 p,
 h2 {
     font-family: "Roboto", sans-serif;
+}
+
+h2 {
+    font-size: 1.3rem;
 }
 
 .name {
@@ -75,7 +81,7 @@ h2 {
 .project-links {
     height: 2rem;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     margin: 10px 20px;
 }
@@ -95,6 +101,10 @@ h2 {
     padding: 0 20px 5px;
 }
 
+.footer-header {
+    align-self: center;
+}
+
 @media (max-width: 1200px) {
     body {
         background-color: yellow;
@@ -103,10 +113,6 @@ h2 {
     .projects {
         grid-template-columns: repeat(2, 1fr);
         gap: 15px;
-    }
-
-    .project-links {
-        justify-content: space-between;
     }
 }
 
@@ -119,9 +125,5 @@ h2 {
     .projects {
         grid-template-columns: repeat(1, 1fr);
         gap: 15px;
-    }
-
-    .project-links {
-        justify-content: space-between;
     }
 }
